src/App.scss
body {
  background: #ffffff;
  width: 100%;
  height: 100%;
}

ul,li {
	margin: 0;
	padding: 0;
}

h1,h3 {
  color: rgb(0, 0, 0);
  text-align: center;
}

h1 {
  font-size: 60px;
}

.content {
  zoom: 1.5;
  -ms-zoom: 1.5;
  -webkit-zoom: 1.5;
  -webkit-box-shadow: 0px 0px 25px 15px #fff;
          box-shadow: 0px 0px 25px 15px #fff;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  position: absolute;
  top:0;
  bottom: 0;
  left: 0;
  right: 0;
  margin: auto;
  vertical-align: middle;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  height: 232px;
  width: 700px;
  border: solid black 12px;
  border-radius: 25px;
}

@-moz-document url-prefix() { 
  .content {
    height: 230px;
    width: 700px;
  }
}

.abacus-list {
  margin: 0px;
  padding: 0px;
  
  white-space: nowrap;
}

.ab-item {
  display: inline-table;
}

.up-beads-container {
	height: 57px;
	width: 40px;
  overflow: hidden;
	position: relative;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  border-bottom-style: none;
}

.down-beads-container {
	height: 139px;
	width: 40px;
  overflow: hidden;
  position: relative;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  margin: 0px;
  padding: 0px;
}

.up-vertical-pole, .down-vertical-pole {
  border: 2.5px solid black;
  background-color: black;
}

svg {
  position: absolute;
  top: 15px;
}

.upbead {
  top: -4px;
}


#source {
  color: #fff;
  margin-left: 10px;
}

.downbead {
  position: absolute;
  bottom: -4px;
  width: 35px;
  height: 35px;
  background: url('./components/bead.svg');
}

.downbead:nth-child(1) {
	bottom: 78px;
}

.downbead:nth-child(2) {
	bottom: 50.5px;
}

.downbead:nth-child(3) {
	bottom: 23.5px;
}

.up-vertical-pole-center-line {
  height: 12px;
  background-color: black;
  color: black;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
}

.ab-item:nth-child(3) {
  .up-vertical-pole-center-line {
    .up-vertical-pole-center-dot {
      z-index: 15;
      height: 12px;
      width: 12px;
      border-radius: 12px;
      background-color: white;
    } 
  }
}

.ab-item:nth-child(6) {
  .up-vertical-pole-center-line {
    .up-vertical-pole-center-dot {
      z-index: 15;
      height: 12px;
      width: 12px;
      border-radius: 12px;
      background-color: white;
    } 
  }
}

.ab-item:nth-child(9) {
  .up-vertical-pole-center-line {
    .up-vertical-pole-center-dot {
      z-index: 15;
      height: 12px;
      width: 12px;
      border-radius: 12px;
      background-color: white;
    } 
  }
}

.ab-item:nth-child(12) {
  .up-vertical-pole-center-line {
    .up-vertical-pole-center-dot {
      z-index: 15;
      height: 12px;
      width: 12px;
      border-radius: 12px;
      background-color: white;
    } 
  }
}

.ab-item:nth-child(15) {
  .up-vertical-pole-center-line {
    .up-vertical-pole-center-dot {
      z-index: 15;
      height: 12px;
      width: 12px;
      border-radius: 12px;
      background-color: white;
    } 
  }
}

.left-line {
  position: absolute;
  top: 30px;
  left: -8px;
  height: 150px;
  width: 4px;
  background-color: #4d4d4d;
  border-radius: 5px;
}

.top-line {
  position: absolute;
  top: -8px;
  left: 40px;
  height: 4px;
  width: 590px;
  background-color: #4d4d4d;
  border-radius: 5px;
}

.right-line {
  position: absolute;
  top: 30px;
  right: -8px;
  height: 150px;
  width: 4px;
  background-color: #4d4d4d;
  border-radius: 5px;
}

.bottom-line {
  position: absolute;
  bottom: -8px;
  left: 40px;
  height: 4px;
  width: 590px;
  background-color: #4d4d4d;
  border-radius: 5px;
}

h1 {
  display:inline-block;
  vertical-align: middle;
}

header {
  text-align: center;
  vertical-align: middle;
  margin-bottom:50px;
}

.pannel {
  position: absolute;
  top: 230px;
  right: 317px;
  z-index: 10;
  display: -ms-grid;
  display: grid;
  place-items: center;
  button {
    border: none;
    height: 42px;
    width: 42px;
    display: -ms-grid;
    display: grid;
    place-items: center;
    border-radius: 50px;
    background: #603813;
    color: #ffffff;
    font-size: 17px;
    -webkit-transition: .5s;
    -o-transition: .5s;
    transition: .5s;
  }
}

.trash-icon {
  position: relative;
  top: -3px;
  left: -5px;
  height: 28px;
  width: 35px;
}

.inverted-italian-hand {
  z-index: 20;
  position: absolute;
  background-size: cover;
  background-position: top center;
  overflow: hidden;
  height: 0px;
  width: 400px;
  top: 5px;
  right: -320px;
}

@media only screen and (max-width: 768px) {
  body {
    background: #ffffff;
    -webkit-transform: rotate(90deg);
        -ms-transform: rotate(90deg);
            transform: rotate(90deg);
  }

  .content {
    zoom: 1.15;
    -ms-zoom: 1.15;
    -webkit-zoom: 1.15;
    height: 232.5;
    width: 587px;
    border: solid black 12px;
    border-radius: 25px;
    position: absolute;
    top: 50%;
    left: 50%;
    right: 50%;
    bottom: 50%;
  }

  @-moz-document url-prefix() {
    .content {
      left: 175px;
      top: -10px;
      width: 585px;
      -moz-transform: scale(1.03);
    }
  }

  .downbead {
    position: absolute;
    bottom: -4px;
    width: 35px;
    height: 35px;
    background: url('./components/bead.svg');
  }
  
  .downbead:nth-child(1) {
    bottom: 78.5px;
  }
  
  .downbead:nth-child(2) {
    bottom: 51px;
  }
  
  .downbead:nth-child(3) {
    bottom: 23.5px;
  }

  .center-line {
    position: absolute;
    top: 57px;
    left: -4px;
    height: 12px;
    width: 570px;
    background-color: black;
  }

  .up-beads-container {
    height: 57px;
    width: 32px;
    overflow: hidden;
    position: relative;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
        -ms-flex-pack: center;
            justify-content: center;
    border-bottom-style: none;
  }

  .down-beads-container {
    height: 140px;
    width: 32px;
    overflow: hidden;
    position: relative;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
        -ms-flex-pack: center;
            justify-content: center;
    margin: 0px 0.5px;
    padding: 0px;
  }
  
  .left-line {
    position: absolute;
    top: 35px;
    left: -8px;
    height: 150px;
    width: 4px;
    background-color: #4d4d4d;
    border-radius: 5px;
  }

  .top-line {
    position: absolute;
    top: -8px;
    left: 35px;
    height: 4px;
    width: 490px;
    background-color: #4d4d4d;
    border-radius: 5px;
  }

  .right-line {
    position: absolute;
    top: 35px;
    right: -8px;
    height: 150px;
    width: 4px;
    background-color: #4d4d4d;
    border-radius: 5px;
  }

  .bottom-line {
    position: absolute;
    bottom: -8px;
    left: 35px;
    height: 4px;
    width: 490px;
    background-color: #4d4d4d;
    border-radius: 5px;
  }

  .pannel {
    z-index: 10;
    position: absolute;
    top: 225px;
    right: 262px;
    font-size: 17px;
    button {
      border: none;
      height: 40px;
      width: 40px;
      border-radius: 50px;
      background: #603813;
      color: #ffffff;
      font-size: 16px;
      -webkit-transition: .5s;
      -o-transition: .5s;
      transition: .5s;
    }
  }
  .trash-icon {  
    position: relative;
    top: -3px;
    left: -6px;
    height: 28px;
    width: 35px;
  }
}

